Stretched link + Koenraad profile link bug fixes

--- a/Client/src/Styles/styles.css
+++ b/Client/src/Styles/styles.css
@@ -40,6 +40,7 @@ td {
  .journallink {
   color: #000;
   text-decoration: none;
+  position: relative;
  }
 
  .authorslist {
